<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_marginBottom="10dp"
              android:orientation="vertical"
              android:padding="20dp">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/system_language"
                android:layout_weight="0.35"
                android:gravity="center"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/currentLanguageContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:gravity="center"
                android:textSize="16sp"/>

    </LinearLayout>

    <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/textfield_placeholder"
            android:minLines="2"
            android:padding="10dp">

        <requestFocus/>
    </EditText>

    <Button
            android:id="@+id/choose_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file"/>

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/speak_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speak"/>

</LinearLayout>